Changed one of my fractionals to 1.1 instead of 1 to fix a little spacing issue and it actually worked lol

--- a/main.scss
+++ b/main.scss
@@ -42,7 +42,7 @@ body {
   margin: 0 auto;
   margin-top: 120px;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2fr 1.1fr;
   grid-column-gap: 5.5rem;
   .skulls {
     .goldSkulls {
